refactor(cosmetic): minor changes, tested
